# project-guild

./: .gitignore  .gitmodules  README.md
Embedded-Systems/Tools/Debugging/: ReadMe.md
Embedded-Systems/Training-Camp/using_tivac/: Readme.md
Embedded-Systems/Training-Camp/using_tivac/OFFICE/: CMakeLists.txt  tiva.specs
Embedded-Systems/Training-Camp/using_tivac/OFFICE/src/: blinky.c
Tools/GIT/: README.md
career/Embedded-Systems/Tools/Github/: README.md
career/Embedded-Systems/Tools/Toolchain/: Readme.md
career/Embedded-Systems/Tools/Toolchain/BinaryUtils/: readme.md
career/Embedded-Systems/Tools/Toolchain/Compiler/: Readme.md
career/Embedded-Systems/Tools/Toolchain/Debugger/: GDB.md  ReadMe.md
career/Embedded-Systems/Tools/Toolchain/Linker/: readme.md
career/Embedded-Systems/Training-Camp/using_tivac/: Readme.md
career/Embedded-Systems/ref/: README.md
using_ceedling/MyProject/src/: Demo.c  Demo.h
using_ceedling/MyProject/test/: test_Demo.c
using_tivac/OFFICE/: README.md
